# utility-rack

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  byte__array_8hpp.html  byte__array_8hpp__dep__incl.map  byte__array_8hpp__dep__incl.md5  byte__array_8hpp__incl.map  byte__array_8hpp__incl.md5  byte__array_8hpp_source.html  byte__array__test_8cpp.html  byte__array__test_8cpp__incl.map  byte__array__test_8cpp__incl.md5  cast__ptr__to_8hpp.html  cast__ptr__to_8hpp__dep__incl.map  cast__ptr__to_8hpp__dep__incl.md5  cast__ptr__to_8hpp_source.html  cast__ptr__to__test_8cpp.html  cast__ptr__to__test_8cpp__incl.map  cast__ptr__to__test_8cpp__incl.md5  classFactorial-members.html  classFactorial.html  classes.html  dir_000000_000001.html  dir_000002_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_3a4d35156996fb70540e167b84a39bd1.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0_dep.map  dir_cfafba98a580ce4b62f8a6fa96d7cbb0_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  erase__where_8hpp.html  erase__where_8hpp__dep__incl.map  erase__where_8hpp__dep__incl.md5  (+73 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_cmake.yml  build_run_unit_test_cmake.yml  gen_docs.yml  generate_docs.yml
cmake/: README.md  header_dirs_var.cmake  unit_test_header_dirs_var.cmake
cmake/all_repos/: add_target_info_func.cmake  doxygen_gen.cmake  make_exe_func.cmake  target_exe_func.cmake  unit_test_main_lib.cmake  unit_test_vars.cmake
cmake/common/: unit_test_vars.cmake
doc/: CMakeLists.txt  Doxyfile  README.md  about.md  doxyfile.config  marshall.md  references.md  release.md  timer.md  utility.md
doc/html/html/: annotated.html  cast__ptr__to_8hpp.html  cast__ptr__to_8hpp__dep__incl.map  cast__ptr__to_8hpp__dep__incl.md5  cast__ptr__to_8hpp_source.html  classchops_1_1const__shared__buffer-members.html  classchops_1_1const__shared__buffer.html  classchops_1_1fixed__size__byte__array-members.html  classchops_1_1fixed__size__byte__array.html  classchops_1_1mutable__shared__buffer-members.html  classchops_1_1mutable__shared__buffer.html  classchops_1_1periodic__timer-members.html  classchops_1_1periodic__timer.html  classchops_1_1wait__queue-members.html  classchops_1_1wait__queue.html  classes.html  dir_000001_000004.html  dir_3a4d35156996fb70540e167b84a39bd1.html  dir_8895ad849ae3a13bd1cf541b2a54dd7b.html  dir_cac49a9e31bf4f7cd5ab50e2700548d0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_e31551851e0e6b7c063ad179dd9ad94a.html  dir_e31551851e0e6b7c063ad179dd9ad94a_dep.map  dir_e31551851e0e6b7c063ad179dd9ad94a_dep.md5  erase__where_8hpp.html  erase__where_8hpp__incl.map  erase__where_8hpp__incl.md5  erase__where_8hpp_source.html  extract__append_8hpp.html  extract__append_8hpp__dep__incl.map  extract__append_8hpp__dep__incl.md5  extract__append_8hpp__incl.map  extract__append_8hpp__incl.md5  extract__append_8hpp_source.html  files.html  forward__capture_8hpp.html  forward__capture_8hpp__incl.map  forward__capture_8hpp__incl.md5  (+64 more)
doc/html/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  (+4 more)
example/: CMakeLists.txt  README.md  erase_where_demo.cpp  repeatDemo.cpp  repeat_demo.cpp  repeat_example.cpp  shared_bufferDemo1.cpp  shared_buffer_demo.cpp  threaded_queue_buffer_demo.cpp  timer_demo.cpp  wait_queue_demo.cpp  wait_queue_demo1.cpp
examples/: repeatDemo.cpp  shared_bufferDemo.cpp  wait_queueDemo1.cpp
include/marshall/: byte_swap.hpp  extract_append.hpp  marshall.hpp  shared_buffer.hpp
include/queue/: wait_queue.hpp
include/timer/: periodic_timer.hpp
include/utility/: byte_array.hpp  cast_ptr_to.hpp  circular_buffer.hpp  erase_where.hpp  forward_capture.hpp  make_byte_array.hpp  overloaded.hpp  overview.md  repeat.hpp  shared_buffer.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
test/: CMakeLists.txt  byte_array_test.cpp  cast_ptr_to_test.cpp  erase_where_test.cpp  forward_capture_test.cpp  main_test.cpp  make_byte_array_test.cpp  oldCMakeLists.txt  overloaded_test.cpp  repeat_test.cpp
test/marshall/: extract_append_test.cpp  marshall_test.cpp  shared_buffer_test.cpp
test/queue/: wait_queue_test.cpp
test/timer/: periodic_timer_test.cpp
test/utility/: cast_ptr_to_test.cpp  erase_where_test.cpp  forward_capture_test.cpp  make_byte_array_test.cpp  repeat_test.cpp  shared_buffer_test.cpp
utility rack/utility rack/: main.cpp
utility rack/utility rack.xcodeproj/: project.pbxproj
utility rack/utility rack.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
utility rack/utility rack.xcodeproj/project.xcworkspace/xcuserdata/roxanneagerone.xcuserdatad/: UserInterfaceState.xcuserstate
utility rack/utility rack.xcodeproj/xcuserdata/roxanneagerone.xcuserdatad/xcschemes/: xcschememanagement.plist
